--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,6 @@
-<h1> About the Developers</h1>
-    <img src="./Images/IMG_0196.JPEG" width="200" height="400" alt="Image Unavailable">
-    <p> On the right, you see Matthew Mandzen.</p>
-    <p> On the left, you see Nathan Nesler.</p>
+{% extends 'base.html' %} {% block body %}
+    <p> About the Developers: Matthew Mandzen & Nathan Nesler </p>
+    <img src="{{ url_for('static', filename = 'Images/IMG_0916.JPEG') }}" alt="Matthew & Nathan" width="200"/>
+    <p> On the right is Matthew & On the left is Nathan </p>
+    {% endblock %}
     
