--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block body %}
     <p> About the Developers: Matthew Mandzen & Nathan Nesler </p>
-    <img src="{{ url_for('static', filename = 'Images/IMG_0916.JPEG') }}" alt="Matthew & Nathan" width="200"/>
+    <img src="{{ url_for('static', filename = 'Images/IMG_0196.jpeg') }}" alt="Matthew & Nathan" width="200"/>
     <p> On the right is Matthew & On the left is Nathan </p>
     {% endblock %}
     
