--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
   <body>
     <nav><a href= "about"> About </a></nav>
-    <nav><a href= "index"> Home </a></nav>
+    <nav><a href= "/"> Home </a></nav>
     <div class="container">{% block body %}xx {% endblock %}</div>
   </body>
 </html>
